[package]
name = "trrs"
version = "0.2.1"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"
homepage = "https://github.com/acheronfail/trrs"
repository = "https://github.com/acheronfail/trrs"
description = "A simple command line tool to convert between common encodings"
authors = ["Callum Oz <acheronfail@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ascii85 = "0.2.1"
base32 = "0.4.0"
base64 = "0.13.0"
base85 = "1.1.0"
bat = { version = "0.20.0", features = ["regex-fancy"] }
clap = { version = "3.0.0", features = ["cargo", "derive"] }
hex = "0.4.3"
strum = { version = "0.24.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
